--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tauri-apps/plugin-clipboard-manager": "^2.0.0",
     "@tauri-apps/plugin-shell": "^2.0.0",
     "primeng": "^17.18.11",
+    "quill": "^2.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
